# sshm

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  tests.yml
src/sshm/: __init__.py  __main__.py  autostart.py  cli.py  config.py  daemon.py  ipc.py  process.py  procutil.py  protocol.py  state.py  terminal.py
src/sshm/completions/: sshm.fish
tests/: test_autostart.py  test_cli.py  test_cli_commands.py  test_config.py  test_daemon.py  test_integration.py  test_ipc.py  test_ipc_server.py  test_process.py  test_process_manager.py  test_procutil.py  test_protocol.py  test_state.py  test_terminal_bridge.py
